--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "dev": "nodemon main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon main.js"
   },
   "keywords": ["whatsapp", "bot", "payments", "notifications"],
   "author": "Seu Nome",
@@ -14,9 +13,7 @@
   "dependencies": {
     "whatsapp-web.js": "^1.23.0",
     "qrcode-terminal": "^0.12.0",
-    "express": "^4.18.2",
-    "puppeteer": "^21.0.0",
-    "dotenv": "^16.3.1"
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
